--- a/revestimientos y decorados.html
+++ b/revestimientos y decorados.html
@@ -13,20 +13,22 @@
 <body>
     <header>
         <div class="contenedor">
-          <div id ="marca">
-              <h1> <span class="resaltado">HARDWARE STORE THE BEST </span> </h1>
-          </div> 
-          <nav>
-            <ul>
-                <li><a href="index.html">Bienvenido</a></li>
-                <li class="actual"></li><a href="revestimientos y decorados.html">Revestimientos y Decorados </a></li>
-                <li><a href="tuberia.html">Tuberias</a></li>
-                <li><a href="materiales de construccion.html">Materiales de Construccion</a></li>
-                <li><a href="griferia.html">Griferia</a></li>
-                <li><a href="formulario.html">Formulario</a></li>
-            </ul>
+            <div id ="marca">
+                <h1> <span class="resaltado">HARDWARE STORE THE BEST </span> </h1>
+            </div> 
+            <nav>
+                <ul>
+                    <li class="actual"><a href="index.html">Bienvenido</a></li>
+                    <li><a href="revestimientos y decorados.html">Revestimientos y Decorados </a></li>
+                    <li><a href="tuberia.html">Tuberias</a></li>
+                    <li><a href="materiales de construccion.html">Materiales de Construccion</a></li>
+                    <li><a href="griferia.html">Griferia</a></li>
+                    <li><a href="formulario.html">Formulario</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
+
     <main>
         
         <section class="seccion-tuberia" id="contenidoi">
