Correccion de menu resaltado
Se corrigió la posicion de la clase actual, en cada uno de los vínculos del menu de todas las páginas

--- a/tuberia.html
+++ b/tuberia.html
@@ -18,9 +18,9 @@
             </div> 
             <nav>
                 <ul>
-                    <li class="actual"><a href="index.html">Bienvenido</a></li>
+                    <li><a href="index.html">Bienvenido</a></li>
                     <li><a href="revestimientos y decorados.html">Revestimientos y Decorados </a></li>
-                    <li><a href="tuberia.html">Tuberias</a></li>
+                    <li class="actual"><a href="tuberia.html">Tuberias</a></li>
                     <li><a href="materiales de construccion.html">Materiales de Construccion</a></li>
                     <li><a href="griferia.html">Griferia</a></li>
                     <li><a href="formulario.html">Formulario</a></li>
