--- a/griferia.html
+++ b/griferia.html
@@ -18,11 +18,11 @@
             </div> 
             <nav>
                 <ul>
-                    <li class="actual"><a href="index.html">Bienvenido</a></li>
+                    <li><a href="index.html">Bienvenido</a></li>
                     <li><a href="revestimientos y decorados.html">Revestimientos y Decorados </a></li>
                     <li><a href="tuberia.html">Tuberias</a></li>
                     <li><a href="materiales de construccion.html">Materiales de Construccion</a></li>
-                    <li><a href="griferia.html">Griferia</a></li>
+                    <li class="actual"><a href="griferia.html">Griferia</a></li>
                     <li><a href="formulario.html">Formulario</a></li>
                 </ul>
             </nav>
